2006-04-17 Rob Janes <janes.rob@gmail.com>
	* javascript for validating and navigating forms.
	* help text (untranslated).
	* EVENT_LOGGING enabling/disabling flag.
	* use SYSTEM_PATH instead of BASE_URL_PATH and BASE_SSL_PATH where ever appropriate.
	* standardize Smarty variables for Network and User info by adding assignSmartyValues($smarty, $self) to Network and User.
	* change_password only allowed if logged in.
	* non-superadmin can only use change_password to change their own password.
	* superadmin can use change_password to change any user password by entering in their password for the old password.
	* page_header div defined and positioned in MainUI

2006-04-04 Benoit Grégoire  <bock@step.polymtl.ca>
	* /classes/Content/IFrame/IFrame.php: Change a few methods from private to protected as the private methods broke IFrameRest

2006-04-01 François Proulx <francois.proulx@gmail.com>
	* Dumped initial schema from working install
	
2006-03-31 Benoit Grégoire  <bock@step.polymtl.ca>
	* dump_initial_data_postgres.sh:  Add the content_available_display_pages table to the dump, can someone re-generate the initial data from a working install
	* Remove the ?> tags from all the classes.

2006-03-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix bug where right_area_bottom content wouldn't be displayed.
	* Minor CSS cleanup

2006-03-28 François Proulx <francois.proulx@gmail.com>
	* Fixed error in initial schema (bad client encoding)
	
2006-03-28 François Proulx <francois.proulx@gmail.com>
	* Fixed schema 37 : left_area_top
	* Updated initial schema
	
2006-03-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* First step in massive simplification of CSS and templates
	* Implement the new main CSS structure
  	* Implement working content assignation interface and content ordering for both network and nodes.
  	* Display of content according to assignation work on 'portal' and 'login'.  'everywhere' not yet implemented
	* Get rid of some ISF specific interface elements