@@ -54,7 +54,7 @@ require_once('classes/Network.php');
 
 Network::assignSmartyValues($smarty);
 $smarty->assign('read_the_faq',
-	sprintf('Read the <a href="%sfaq.php">faq</a> document for more information.', SYSTEM_PATH));
+	sprintf('Read the <a href="%sfaq.php">faq</a> document for more information.', BASE_URL_PATH));
 
 $ui = new MainUI();
 $ui->appendContent('main_area_middle', $smarty->fetch("templates/sites/help.tpl"));
