@@ -59,7 +59,7 @@
         <title>{$title}</title>
 
 		<link rel="stylesheet" type="text/css" href="{$stylesheetURL}">
-		<script src="{$system_path}js/formutils.js"></script>
+		<script src="{$base_url_path}js/formutils.js"></script>
 
         <style type="text/css">
             {include file="$stylesheetParsedFile"}
